WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221586
REGRESSION(
r272480
): Caused assertion failure seen with EME tests
https://bugs.webkit.org/show_bug.cgi?id=221586
Summary
REGRESSION(r272480): Caused assertion failure seen with EME tests
WebKit Commit Bot
Reported
2021-02-08 16:37:27 PST
https://trac.webkit.org/changeset/272480
broke the build: Caused assertion failure seen with EME tests This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r272480
(130.11 KB, patch)
2021-02-08 16:37 PST
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2021-02-08 16:37:42 PST
Created
attachment 419654
[details]
REVERT of
r272480
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Ryan Haddad
Comment 2
2021-02-08 16:41:31 PST
Here is the (long) backtrace for the EME test crash seen on Apple internal bots: ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key) /Volumes/Data/worker/build/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/HashTable.h(649) : void WTF::HashTable<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>>>, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>>>::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>>::checkKey(const T &) [Key = WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, Value = WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>>, Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>>>, HashFunctions = WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, Traits = WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>>>::KeyValuePairTraits, KeyTraits = WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, HashTranslator = WTF::HashMapTranslator<WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest>>>>::KeyValuePairTraits, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>>>, T = WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>] 1 0x1356b72cc WTFCrash 2 0x104cb6f24 WTF::StringImpl::at(unsigned int) const 3 0x1067ce78c void WTF::HashTable<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> > >::checkKey<WTF::HashMapTranslator<WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::KeyValuePairTraits, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> > >, WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >(WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> const&) 4 0x1067ce47c WTF::HashTableAddResult<WTF::HashTableIterator<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> > > > WTF::HashTable<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> > >::add<WTF::HashMapTranslator<WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::KeyValuePairTraits, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> > >, WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > >(WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>&&, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >&&) 5 0x1067ce3f8 WTF::HashTableAddResult<WTF::HashTableIterator<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> > > > WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::inlineAdd<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > >(WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>&&, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >&&) 6 0x1067b5fc4 WTF::HashTableAddResult<WTF::HashTableIterator<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > >, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::KeyValuePairTraits, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> > > > WTF::HashMap<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >, WTF::DefaultHash<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType> >, WTF::HashTraits<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > > >::add<WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> > >(WTF::ObjectIdentifier<WebCore::MediaKeySystemRequestIdentifierType>&&, WTF::Ref<WebCore::MediaKeySystemRequest, WTF::RawPtrTraits<WebCore::MediaKeySystemRequest> >&&) 7 0x1067b5c38 WebKit::MediaKeySystemPermissionRequestManager::sendMediaKeySystemRequest(WebCore::MediaKeySystemRequest&) 8 0x1067b5aa4 WebKit::MediaKeySystemPermissionRequestManager::startMediaKeySystemRequest(WebCore::MediaKeySystemRequest&) 9 0x106b17798 WebKit::WebMediaKeySystemClient::requestMediaKeySystem(WebCore::MediaKeySystemRequest&) 10 0x1150bc79c WebCore::MediaKeySystemController::requestMediaKeySystem(WebCore::MediaKeySystemRequest&) 11 0x1150bc65c WebCore::MediaKeySystemRequest::start() 12 0x1151961b8 WebCore::NavigatorEME::requestMediaKeySystemAccess(WebCore::Navigator&, WebCore::Document&, WTF::String const&, WTF::Vector<WebCore::CDMKeySystemConfiguration, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&) 13 0x115d7c6fc WebCore::jsNavigatorPrototypeFunction_requestMediaKeySystemAccessBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSNavigator*, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&) 14 0x115d7fb70 long long WebCore::IDLOperationReturningPromise<WebCore::JSNavigator>::call<&(WebCore::jsNavigatorPrototypeFunction_requestMediaKeySystemAccessBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSNavigator*, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&)), (WebCore::CastedThisErrorBehavior)2>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*)::'lambda'(JSC::JSGlobalObject&, JSC::CallFrame&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&)::operator()(JSC::JSGlobalObject&, JSC::CallFrame&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&) const 15 0x115d7c8b4 JSC::JSValue WebCore::callPromiseFunction<long long WebCore::IDLOperationReturningPromise<WebCore::JSNavigator>::call<&(WebCore::jsNavigatorPrototypeFunction_requestMediaKeySystemAccessBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSNavigator*, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&)), (WebCore::CastedThisErrorBehavior)2>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*)::'lambda'(JSC::JSGlobalObject&, JSC::CallFrame&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&)>(JSC::JSGlobalObject&, JSC::CallFrame&, &(WebCore::jsNavigatorPrototypeFunction_requestMediaKeySystemAccessBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSNavigator*, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&))) 16 0x115d7c39c long long WebCore::IDLOperationReturningPromise<WebCore::JSNavigator>::call<&(WebCore::jsNavigatorPrototypeFunction_requestMediaKeySystemAccessBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSNavigator*, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&)), (WebCore::CastedThisErrorBehavior)2>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) 17 0x115d770f4 WebCore::jsNavigatorPrototypeFunction_requestMediaKeySystemAccess(JSC::JSGlobalObject*, JSC::CallFrame*) 18 0x280004c04 19 0x2800041e8 20 0x2800041e8 21 0x2800041e8 22 0x280004728 23 0x1371cd77c JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 24 0x136a8b2dc JSC::Interpreter::executeCall(JSC::JSGlobalObject*, JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 25 0x136e092f4 JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 26 0x136e093c4 JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 27 0x136e096f0 JSC::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 28 0x1176a06ac WebCore::JSExecState::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 29 0x1176026e8 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 30 0x117d67240 WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener> >, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 31 0x117d631f4 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) LEAK: 1 WebPageProxy
Ryan Haddad
Comment 3
2021-02-08 16:42:35 PST
<
rdar://74119248
>
EWS
Comment 4
2021-02-08 16:43:52 PST
Committed
r272561
: <
https://commits.webkit.org/r272561
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419654
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-02-08 16:44:20 PST
<
rdar://problem/74120289
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug