Cherry-pick r272561. rdar://problem/74210218

Unreviewed, reverting r272480, r272481, and r272500.
    https://bugs.webkit.org/show_bug.cgi?id=221586

    Caused assertion failure seen with EME tests

    Reverted changesets:

    "Permission request API for MediaKeySystem access support"
    https://bugs.webkit.org/show_bug.cgi?id=221187
    https://trac.webkit.org/changeset/272480

    "Unreviewed, build fix after r272480"
    https://trac.webkit.org/changeset/272481

    "Permission request API for MediaKeySystem access support"
    https://bugs.webkit.org/show_bug.cgi?id=221187
    https://trac.webkit.org/changeset/272500

    Canonical link: https://commits.webkit.org/233833@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272561 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/233803.4@safari-612.1.3-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.3-branch@272695 268f45cc-cd09-0410-ab3c-d52691b4dbfc