Tools/WebKitTestRunner/InjectedBundle/TestRunner.h
@@ -519,8 +519,6 @@ public:
 
     void setIsSpeechRecognitionPermissionGranted(bool);
 
-    void setIsMediaKeySystemPermissionGranted(bool);
-
 private:
     TestRunner();
 
